# training-projecteuler

./: .gitignore  CMakeLists.txt  README.md
src/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp  016.cpp
